Bug 1644425 part 1 - Replace ToLength function in self-hosted code with an intrinsic. r=anba

This fixes a regression from bug 1643680 because the code relied on Math.min/max
with int32 and double arguments returning an int32 when possible. Porting this
to C++ should make this less brittle.

Differential Revision: https://phabricator.services.mozilla.com/D78917